[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/SinglePlayerManager.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SinglePlayerHud.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/SinglePlayerPause.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Music/NoMessingWithUs.wav" type="AudioStream" id=4]

[node name="SinglePlayerManager" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 2 )]
visible = false

[node name="PauseMenu" parent="." instance=ExtResource( 3 )]
visible = false

[node name="StartTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="EndTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
bus = "Music"
[connection signal="timeout" from="StartTimer" to="." method="_start_race"]
[connection signal="timeout" from="EndTimer" to="." method="end_race"]
